Closed
Bug 638199
Opened 15 years ago
Closed 15 years ago
Shrink ArenaHeader
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: gwagner, Assigned: gwagner)
Details
(Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file, 1 obsolete file)
|
5.38 KB,
patch
|
billm
:
review+
|
Details | Diff | Splinter Review |
We can move some fields from ArenaHeader to the debug mode.
| Assignee | ||
Comment 1•15 years ago
|
||
Use thingSize and isUsed only in debug mode.
Assignee: general → anygregor
| Assignee | ||
Comment 2•15 years ago
|
||
Attachment #516368 -
Attachment is obsolete: true
| Assignee | ||
Updated•15 years ago
|
Attachment #517320 -
Flags: review?(wmccloskey)
I'm actually not too familiar with the low-level arena code. A few questions:
- Why did you move the assertion in Arena<T>::mark?
- Why is it okay to get rid of the CGCT_FREEARENA check?
- In Chunk::init, it seems like you should be setting arena->compartment to NULL. Is it okay to assume that new chunks are zeroed?
| Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #3)
> I'm actually not too familiar with the low-level arena code. A few questions:
> - Why did you move the assertion in Arena<T>::mark?
Because I removed the redundant check in MarkIfGCThingWord. Now we can enter this function for an unsued arena and the thingsize is 0;
Only after "if (!aheader.compartment || inFreeList(alignedThing))" we know that the arena is used now.
> - Why is it okay to get rid of the CGCT_FREEARENA check?
It is redundant.
> - In Chunk::init, it seems like you should be setting arena->compartment to
> NULL. Is it okay to assume that new chunks are zeroed?
Good point! I think this line got lost during my last merge.
Comment on attachment 517320 [details] [diff] [review]
patch
OK, now I see. Thanks.
Attachment #517320 -
Flags: review?(wmccloskey) → review+
| Assignee | ||
Comment 6•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 7•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•