Bug 638199 - Shrink ArenaHeader (r=wmccloskey)